--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,13 +6,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 0.0.1+1
 
 environment:
-  sdk: ^3.1.1
+  sdk: ^2.12.0
 
 dependencies:
   flutter:
     sdk: flutter
   english_words: ^4.0.0
   provider: ^6.0.0
+  flutter_datetime_picker_plus: ^2.1.0
+  qr_flutter: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -26,3 +28,5 @@ flutter:
     - assets/logo.png
     - assets/green_background.png
     - assets/pale_red_image.png
+    - assets/student_bkg_1.jpg
+    - assets/student_bkg.png
